# CowTerm

./: .gitignore  CMakeLists.txt  DESIGN-WEBUI.md  PARITY.md  README.md  justfile
Daemon/: Main.cpp
Terminal/: AppShell.cpp  AppShell.h  CMakeLists.txt  ClaudeHud.cpp  ClaudeHud.h  Command.cpp  Command.h  Config.cpp  Config.h  DaemonClient.cpp  GitWorktree.cpp  GitWorktree.h  GlyphAtlas-Windows.cpp  GlyphAtlas.cpp  GlyphAtlas.h  Palette.cpp  Palette.h  Popup.cpp  Popup.h  PrDashboard.cpp  PrDashboard.h  Protocol.h  Pty-Posix.cpp  Pty-Windows.cpp  RemoteHud.cpp  RemoteHud.h  Session.cpp  Session.h  SessionCommand.cpp  SessionCommand.h  SessionView.cpp  SessionView.h  Shell.h  Switcher.cpp  Switcher.h  TerminalView.cpp  TerminalView.h  Trash-Windows.cpp  Trash-macOS.mm  Trash.h
Terminal/Resources/: webui.html
Terminal/Web/: GatewayClient.cpp  GatewayClient.h  ScreenSerializer.cpp  ScreenSerializer.h  Sha1.h  WebGateway.cpp  WebGateway.h  WebSocket.cpp  WebSocket.h  Wire.h
Test/: CMakeLists.txt  PtyTests.cpp  WebTests.cpp
Test/WebUI/: README.md  drive.js  parity.js  restart.sh
